# OtterPill-examples

./: .gitmodules  CMakeLists.txt  README.md  setup.sh
hal/: CMakeLists.txt  README.md
hal/include/: common.h  main.h  serial_print.h  stm32f0xx_hal_conf.h
hal/src/: blink.c  common.c  serial_print.c  serial_print_main.c  stm32f0xx_hal_msp.c
